--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>ANDROID_CLIENT_ID</key>
 	<string>233445190485-lhatbag40pf2o26estbgn0064mjm0psk.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDJtABILSpr_BUZco8xob8TlCRKa8aHdsg</string>
+	<string>KEYS</string>
 	<key>GCM_SENDER_ID</key>
 	<string>233445190485</string>
 	<key>PLIST_VERSION</key>
